syntax = "proto3";

option java_multiple_files = true;
package communication;
import "model.proto";

service reservationService {

  rpc getReservation(UserIdRequest) returns (BooleanResponse);
}