syntax = "proto3";

option java_multiple_files = true;
package communication;
import "model.proto";

service userDetailsService {
  rpc getUserDetails(UserDetailsRequest) returns (UserDetailsResponse);

  rpc register(RegisterUser) returns (MessageResponse);

  rpc changeUserInfo(User) returns (User);

  rpc findAll(EmptyRequest) returns (UserList);

  rpc getById(UserIdRequest) returns (RegisterUser);

  rpc delete(UserIdRequest) returns (MessageResponse);
}